fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
   margin: 0 auto;
   text-align: center;
-  overflow-y: hidden;
+  margin-bottom: 2rem;
 }
